--- a/Lab 3/Lab3.ipynb
+++ b/Lab 3/Lab3.ipynb
@@ -5,10 +5,7 @@
     "colab": {
       "name": "Lab3.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNxIHkI9xCUG5Q5bXTQ0SAK",
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +14,6 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/MargaretaDiacenco/LABS-AI/blob/main/Lab3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -34,7 +21,7 @@
           "height": 511
         },
         "id": "3UFy5RbTRIB9",
-        "outputId": "7fc970c5-bbf9-4ca4-c35c-6926df6b91e6"
+        "outputId": "6eea9488-8dc5-4448-908b-c1fdd6ba3972"
       },
       "source": [
         "import pandas as pd\r\n",
@@ -42,18 +29,12 @@
         "import matplotlib.pyplot as plt\r\n",
         "import seaborn as sns\r\n",
         "import csv\r\n",
+        "\r\n",
         "from sklearn.model_selection import train_test_split\r\n",
         "from sklearn.linear_model import LinearRegression\r\n",
         "from scipy.stats import kendalltau\r\n",
         "from scipy.stats import ttest_rel\r\n",
         "from scipy.stats import f_oneway\r\n",
-        "import sklearn.metrics as sm\r\n",
-        "from sklearn.metrics import r2_score\r\n",
-        "from scipy.stats import pearsonr, chi2_contingency, ttest_ind\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
         "\r\n",
         "df = pd.read_csv('apartmentComplexData.txt')\r\n",
         "df.to_csv('apartmentComplexData.csv', index=None)\r\n",
@@ -65,25 +46,21 @@
         "#sns.heatmap(df.corr(), cmap='coolwarm')\r\n",
         "#plt.show()\r\n",
         "\r\n",
-        "df['complexAge'] = df['complexAge'].fillna(df['complexAge'].mean())\r\n",
-        "df['totalRooms'] = df['totalRooms'].fillna(df['totalRooms'].mean())\r\n",
-        "df['totalBedrooms'] = df['totalBedrooms'].fillna(df['totalBedrooms'].mean())\r\n",
-        "df['complexInhabitants'] = df['complexInhabitants'].fillna(df['complexInhabitants'].mean())\r\n",
-        "df['apartmentsNr'] = df['apartmentsNr'].fillna(df['apartmentsNr'].mean())\r\n",
-        "df['medianComplexValue'] = df['medianComplexValue'].fillna(df['medianComplexValue'].mean())\r\n",
-        "\r\n",
         "X = df[['col1', 'col2', 'complexAge', 'totalRooms', 'totalBedrooms', 'complexInhabitants', 'apartmentsNr', 'col8']].values\r\n",
         "Y = df[['medianComplexValue']].values\r\n",
-        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y)\r\n",
         "\r\n",
+        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y)\r\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size = 0.2, random_state = 20)\r\n",
         "\r\n",
         "regressor = LinearRegression()\r\n",
         "regressor.fit(X_train, y_train)\r\n",
-        "\r\n",
         "Y_pred = regressor.predict(X_test)\r\n",
         "print(Y_pred)\r\n",
-        "plt.scatter(y_test, Y_pred)\r\n",
+        "\r\n",
+        "inputs = [[-122.130000,37.780000,54.000000,1284.000000,587.000000,751.000000,472.000000,3.640000]]\r\n",
+        "prediction = regressor.predict(inputs)\r\n",
+        "\r\n",
+        "print(\"Predicted value\", prediction) #288273 predicted vs initial 272408\r\n",
         "\r\n",
         "# Example of the Kendall's Rank Correlation Test\r\n",
         "data1 = [-122.250000,37.850000,52.000000,1627.000000,280.000000,565.000000,259.000000,3.846200,342200.000000]\r\n",
@@ -115,14 +92,9 @@
         "if p > 0.05:\r\n",
         "\tprint('Probably the same distribution')\r\n",
         "else:\r\n",
-        "\tprint('Probably different distributions')\r\n",
-        "\r\n",
-        "inputs = [[-122.130000,37.780000,54.000000,1284.000000,587.000000,751.000000,472.000000,3.640000]]\r\n",
-        "prediction = regressor.predict(inputs)\r\n",
-        "\r\n",
-        "print(\"Predicted value\", prediction)\r\n"
+        "\tprint('Probably different distributions')"
       ],
-      "execution_count": 111,
+      "execution_count": 113,
       "outputs": [
         {
           "output_type": "stream",
